<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/RLO">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/RLO_buttons"
        android:background="#555">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location_textview"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:hint="@string/cityandaddress"/>

        <Button
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchButton"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:onClick="onSearch" />
    </RelativeLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:context="com.example.project.myapplication.MapsActivity"
        android:layout_below="@+id/LLO"
        android:layout_above="@+id/LLO2"
        map:cameraZoom="18"
        map:uiZoomControls="true"
        android:layout_width="match_parent"
        android:layout_height="350dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/RLO_buttons"
        android:layout_centerHorizontal="true"
        android:background="#0000"
        android:id="@+id/LLO">
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#0000"
        android:id="@+id/LLO2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/close"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/closeButton" />

        <TextView
            android:text="@string/speed"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSpeed"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/closeButton"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="25dp"
            android:textStyle="italic"
            android:layout_alignBottom="@+id/closeButton"
            android:layout_alignStart="@+id/tvConsumption" />

        <TextView
            android:text="@string/consumeinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvConsumption"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tvSpeed"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/closeButton" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNotification3"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/closeButton"
            android:layout_toEndOf="@+id/tvNotification2"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:text="@string/drivetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:layout_marginLeft="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="15dp"
            android:gravity="center_vertical"
            android:id="@+id/tvNotification2"
            android:layout_below="@+id/closeButton"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</RelativeLayout>