<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/RLO1">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#aa9898"
        android:id="@+id/LLO2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/buttonCredits"
            android:layout_gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonExit"
            android:layout_weight="1"
            android:onClick="closeProgram"
            android:layout_gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/buttonStartCalculate"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mapsicon"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/LLO2"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"/>

</RelativeLayout>